# iechelle

./: .gitignore  Makefile  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
iechelle/: config.py  mycatalog_delete.py
iechelle/gui/: catalog.py  config.py  control_panel.py  control_panel_delete.py  env.py  functions.py  main.py  mode_selection.py  other_catalog.py
tests/gui/: test_functions.py
